example/mongodb/tier-1-vpx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    ingress.citrix.com/analyticsprofile: '{"tcpinsight": {"tcpBurstReporting":"DISABLED"}}'
    ingress.citrix.com/insecure-port: '27017'
    ingress.citrix.com/insecure-service-type: mongo
    ingress.citrix.com/insecure-termination: allow
  name: mongo-db-ingress
spec:
  defaultBackend:
    service:
      name: mongodb-mongos
      port:
        number: 27017
  ingressClassName: tier-1-vpx
---
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: tier-1-vpx
spec:
  controller: citrix.com/ingress-controller
---
